//
// Copyright (C) 2019-2023 vdaas.org vald team <vald@vdaas.org>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package vald.v1;

import "apis/proto/v1/payload/payload.proto";
import "github.com/googleapis/googleapis/google/api/annotations.proto";

option go_package = "github.com/vdaas/vald/apis/grpc/v1/vald";
option java_multiple_files = true;
option java_outer_classname = "ValdInsert";
option java_package = "org.vdaas.vald.api.v1.vald";

// Insert service provides ways to add new vectors.
service Insert {
  // A method to add a new single vector.
  rpc Insert(payload.v1.Insert.Request) returns (payload.v1.Object.Location) {
    option (google.api.http) = {
      post: "/insert"
      body: "*"
    };
  }

  // A method to add new multiple vectors by bidirectional streaming.
  rpc StreamInsert(stream payload.v1.Insert.Request) returns (stream payload.v1.Object.StreamLocation) {}

  // A method to add new multiple vectors in a single request.
  rpc MultiInsert(payload.v1.Insert.MultiRequest) returns (payload.v1.Object.Locations) {
    option (google.api.http) = {
      post: "/insert/multiple"
      body: "*"
    };
  }
}
